[package]
name = "gk-yaml"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
simple_logger = "2.1.0"
exitcode = "1.1.2"
chrono = "0.4"
mockall = "0.11.0"
regex = "1"
